--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "git-commit-msg-linter": "^4.7.3",
     "react": "18.1.0",
     "react-native": "0.70.5"
   },
