--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react-native": "0.70.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/react": "^18.0.28",
+    "@types/react-native": "^0.71.3",
+    "typescript": "^4.9.5"
   },
   "private": true
 }
