--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "git-commit-msg-linter": "^4.7.3",
+    "prop-types": "^15.8.1",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0"
   },
