--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "server": "json-server db.json -w --port 3333"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.7",
@@ -26,6 +27,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "^18.0.28",
     "@types/react-native": "^0.71.3",
+    "json-server": "^0.17.3",
     "typescript": "^4.9.5"
   },
   "private": true
