--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "axios": "^1.3.5",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "git-commit-msg-linter": "^4.7.3",
