--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "server": "json-server db.json -w --port 3333"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
