--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.5",
     "expo": "~47.0.12",
+    "expo-local-authentication": "~13.0.2",
     "expo-status-bar": "~1.4.2",
     "git-commit-msg-linter": "^4.7.3",
     "prop-types": "^15.8.1",
